perf(Beat-1.1.0): Publish to github remote

--- a/config/.env
+++ b/config/.env
@@ -1,17 +1,19 @@
-ENVIRONMENT=local
+ENVIRONMENT=
 
-TZ=CST
-VERSION=0.0.1-Beat
+TZ=
+VERSION=
 
 PRE_SALT=
 END_SALT=
 
 MYSQL_DB_POINT=mysql:3306
-MYSQL_DB_USERNAME=
-MYSQL_DB_PASSWORD=
 MYSQL_DB_SCHEMA=geek_home
+MYSQL_GEEK_HOME_READ_ONLY_USER=
+MYSQL_GEEK_HOME_READ_ONLY_PWD=
+MYSQL_GEEK_HOME_USER=
+MYSQL_GEEK_HOME_PWD=
 
-REDIS_POINT=
+REDIS_POINT=redis:6370
 REDIS_PWD=
 
 MAIL_HOST=
@@ -23,3 +25,6 @@ ADMIN_MAIL_PWD=
 
 DEEPL_API_KEY=
 JUDGE0_API_KEY=
+DEEPL_URL=https://api-free.deepl.com/v2/translate
+JUDGE0_API_URL=https://judge0-ce.p.rapidapi.com/submissions/
+JUDGE0_TOKEN_URL=https://judge0-ce.p.rapidapi.com/submissions?base64_encoded=true&fields=*
